@@ -1,3 +1,11 @@
+2007-11-17  Marcus D. Hanwell <marcus@cryos.org>
+	* libavogadro/src/engines/labelsettingswidget.ui,
+	libavogadro/src/engines/ribbonengine.cpp,
+	libavogadro/src/engines/spheresettingswidget.ui,
+	libavogadro/src/engines/ringsettingswidget.ui,
+	libavogadro/src/engines/ribbonsettingswidget.ui: Added spacers to the
+	engine configuration dialogs.
+
 2007-11-16  Marcus D. Hanwell <marcus@cryos.org>
 	* libavogadro/src/color.*, libavogadro/src/glpainter.cpp: Added a new
 	OpenGL material that should work better with the ring engine.
